@@ -1,7 +1,7 @@
 PKG_NAME="lidarr"
 PKG_VERSION="0.5.0.583"
 PKG_SHA256="e77b86b38e981c3f859a6e373be63a20d49ba855523b77a8a664d7d336ea166f"
-PKG_REV="6"
+PKG_REV="7"
 PKG_LICENSE="GPLv3"
 PKG_SITE="http://lidarr.audio/"
 PKG_URL="https://github.com/lidarr/Lidarr/releases/download/v$PKG_VERSION/Lidarr.develop.$PKG_VERSION.linux.tar.gz"
@@ -20,6 +20,6 @@ PKG_DISCLAIMER="Keep it legal and carry on"
 PKG_TOOLCHAIN="manual"
 
 addon() {
-  mkdir -p "$ADDON_BUILD/$PKG_ADDON_ID/Lidarr"
-  cp -PR "$PKG_BUILD"/* "$ADDON_BUILD/$PKG_ADDON_ID/Lidarr"
+  mkdir -p "$ADDON_BUILD/$PKG_ADDON_ID/lidarr"
+  cp -PR "$PKG_BUILD"/* "$ADDON_BUILD/$PKG_ADDON_ID/lidarr"
 }
