@@ -4,4 +4,4 @@
 oe_setup_addon service.lidarr
 
 nice -n "$lr_nice" \
-mono "$ADDON_DIR/Lidarr/Lidarr.exe" -data="$ADDON_HOME" -nobrowser
+mono "$ADDON_DIR/lidarr/Lidarr.exe" -data="$ADDON_HOME" -nobrowser
