@@ -5,13 +5,13 @@ import xbmcaddon
 
 class Monitor(xbmc.Monitor):
 
-   def __init__(self, *args, **kwargs):
-      xbmc.Monitor.__init__(self)
-      self.id = xbmcaddon.Addon().getAddonInfo('id')
+    def __init__(self, *args, **kwargs):
+        xbmc.Monitor.__init__(self)
+        self.id = xbmcaddon.Addon().getAddonInfo('id')
 
-   def onSettingsChanged(self):
-      subprocess.call(['systemctl', 'restart', self.id])
+    def onSettingsChanged(self):
+        subprocess.call(['systemctl', 'restart', self.id])
 
 
 if __name__ == '__main__':
-   Monitor().waitForAbort()
+    Monitor().waitForAbort()
